src/tests/fixtures/subscriptions/InterfaceWithAsyncIterable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
export interface NotSubscription {
  /** @gqlField */
  greetings(): AsyncIterable<string>;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/subscriptions/InterfaceWithAsyncIterable.invalid.ts:4:16 - error: Unexpected AsyncIterable. Only fields on `Subscription` should return an AsyncIterable.

4   greetings(): AsyncIterable<string>;
                 ~~~~~~~~~~~~~~~~~~~~~
